unpackaged/main/default/objects/ffirule__IntegrationRuleJob__c/ffirule__IntegrationRuleJob__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrulejob</customHelpPage>
    <label>ClickLink Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>