unpackaged/main/default/objects/ffirule__IntegrationRuleJob__c/fields/ffirule__ListViewName__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ListViewName__c</fullName>
    <label>List View Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>