unpackaged/main/default/objects/ffirule__IntegrationRuleJob__c/fields/ffirule__ListViewObject__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ListViewObject__c</fullName>
    <label>List Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>