unpackaged/main/default/objects/ffirule__IntegrationRuleJob__c/fields/ffirule__ListViewSourceIDField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ListViewSourceIDField__c</fullName>
    <label>List Object Source ID Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>