unpackaged/main/default/objects/ffirule__IntegrationRuleJob__c/fields/ffirule__ScheduledApexJobCronExpression__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ScheduledApexJobCronExpression__c</fullName>
    <label>Scheduled Apex Job Cron Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>