unpackaged/main/default/objects/ffirule__IntegrationRuleJob__c/fields/ffirule__ScheduledApexJobID__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ScheduledApexJobID__c</fullName>
    <label>Scheduled Apex Job ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>